--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,7 +1,38 @@
 h1 {
+    font-family: lato,sans-serif;
+    font-weight: bold;
     color: white;
     
 }
-html {
+body {
+    background-color: #10092E;
     font-family: 'Raleway';font-size: 22px;
 }
+.light_button {
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    border-radius: 40px;
+    height: 25px;
+    line-height: 25px;
+    color: #FFFFFF;
+    font-family: Open Sans;
+    width: 150px;
+    font-size: 25px;
+    font-weight: 100;
+    padding: 20px;
+    background-color: rgba(255, 255, 255, 0);
+    border: solid #97FCEC 3px;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+ }
+ 
+ .light_button:hover {
+    background: #89E5D6;
+    border: solid rgba(255, 255, 255, 0) 3px;
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    border-radius: 40px;
+    text-decoration: none;
+ }
